--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "latex-utensils-yx",
+  "name": "latex-utensils",
   "version": "4.1.2",
   "license": "MIT",
   "description": "A LaTeX parser and utilities",
