--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
         "lib": [
             "es2017"
         ],
-        "module": "commonjs",
+        "module": "es6",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
