--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mocha": "^9.2.2",
     "npm-run-all": "^4.1.5",
     "onchange": "^6.1.0",
+    "peggy": "^1.2.0",
     "pegjs": "^0.10.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
@@ -45,14 +46,14 @@
     "parser"
   ],
   "scripts": {
-    "generate:latex:simple": "pegjs --allowed-start-rules Root,Preamble -o out/src/latex/latex_parser_simple.js src/latex/latex.pegjs",
-    "generate:latex:trace": "pegjs --trace --allowed-start-rules Root,Preamble -o out/src/latex/latex_parser_trace.js src/latex/latex.pegjs",
+    "generate:latex:simple": "peggy --format es --allowed-start-rules Root,Preamble -o out/src/latex/latex_parser_simple.js src/latex/latex.pegjs",
+    "generate:latex:trace": "peggy --format es --trace --allowed-start-rules Root,Preamble -o out/src/latex/latex_parser_trace.js src/latex/latex.pegjs",
     "generate:latex": "run-p generate:latex:*",
-    "generate:bibtex:simple": "pegjs -o out/src/bibtex/bibtex_parser_simple.js src/bibtex/bibtex.pegjs",
-    "generate:bibtex:trace": "pegjs -o out/src/bibtex/bibtex_parser_trace.js src/bibtex/bibtex.pegjs",
+    "generate:bibtex:simple": "peggy --format es -o out/src/bibtex/bibtex_parser_simple.js src/bibtex/bibtex.pegjs",
+    "generate:bibtex:trace": "peggy --format es -o out/src/bibtex/bibtex_parser_trace.js src/bibtex/bibtex.pegjs",
     "generate:bibtex": "run-p generate:bibtex:*",
-    "generate:latex_log:simple": "pegjs -o out/src/latex_log/latex_log_parser_simple.js src/latex_log/latex_log.pegjs",
-    "generate:latex_log:trace": "pegjs -o out/src/latex_log/latex_log_parser_trace.js src/latex_log/latex_log.pegjs",
+    "generate:latex_log:simple": "peggy --format es -o out/src/latex_log/latex_log_parser_simple.js src/latex_log/latex_log.pegjs",
+    "generate:latex_log:trace": "peggy --format es -o out/src/latex_log/latex_log_parser_trace.js src/latex_log/latex_log.pegjs",
     "generate:latex_log": "run-p generate:latex_log:*",
     "generate": "run-p generate:*",
     "build": "run-s clean compile generate",
